--- a/lazy-loading/index.html
+++ b/lazy-loading/index.html
@@ -2,8 +2,8 @@
 <html>
   <body>
     <a href="https://mathiasbynens.be/demo/img-loading-lazy">A good example of lazy loading images.</a></br>
-    <img src="/image/big-big-1.jpg" loading="eager" alt="..." /></br>
-    <img src="/image/big-big-1.jpg" loading="auto" alt="..." /></br>
-    <img src="/image/big-big-1.jpg" loading="lazy" alt="..." /></br>
+    <img src="/image/big-ben-1.jpg" loading="eager" alt="..." /></br>
+    <img src="/image/big-ben-2.jpg" loading="auto" alt="..." /></br>
+    <img src="/image/big-ben-3.jpg" loading="lazy" alt="..." /></br>
   </body>
 </html>
