make it nice in the lazy-loading html

--- a/lazy-loading/index.html
+++ b/lazy-loading/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-gb">
+  <head>
+    <meta charset="utf-8">
+    <title>Lazy Loading</title>
+  </head>
   <body>
     <a href="https://mathiasbynens.be/demo/img-loading-lazy">A good example of lazy loading images.</a></br>
     <img src="/lazy-loading/image/big-ben-1.jpg" loading="eager" alt="..." /></br>
