expand image pwa

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -4,8 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f9d355"/>
     <title>PWA</title>
     <link rel="manifest" href="/pwa/manifest.json">
+    <link rel="icon" sizes="215x215" href="/pwa/images/icon-215.png">
+    <link rel="apple-touch-icon" href="/pwa/images/icon-215.png">
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
