fix splash screen images

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#f9d355"/>
+    <meta name="description" content="This site is an awesome PWA!">
     <title>PWA</title>
     <link rel="manifest" href="/pwa/manifest.json">
     <link rel="icon" sizes="215x215" href="/pwa/images/icon-215.png">
